hphp/test/zend/good/Zend/tests/bug43344_3.php.expectf

Fatal error: Class undefined: Foo\Foo in %s/bug43344_3.php on line 3
